welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: error: not found: value Direction
    setDirection(Direction.EAST)
                 ^DwarfCode:10: error: not found: value estsurBiscuit
    if (estsurBiscuit()) 
        ^